<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff2461"
    tools:context="christhomps.example.christianthompson.dogorcatperson.MainActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:background="#ffffedde"
        android:layout_width="320dp"
        android:layout_height="338dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17"
        tools:layout_editor_absoluteY="86dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/canineId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/canine_text" />

            <RadioGroup
                android:id="@+id/radioGroupCanine"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioCanineNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_text" />

                <RadioButton
                    android:id="@+id/radioCanineYes"
                    android:text="@string/yes_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RadioGroup>

            <TextView
                android:id="@+id/seekBarText"
                android:text="@string/scale_text"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <SeekBar
                android:id="@+id/seekBarFelineId"
                android:layout_width="250dp"
                android:paddingBottom="5dp"
                android:max="10"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/seekBarProgressId"
                android:text="@string/default_seekBar_text"
                android:paddingBottom="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/cutestPetId"
                android:paddingBottom="3dp"
                android:text="@string/cutest_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <CheckBox
                    android:id="@+id/checkBoxCutestDog"
                    android:text="@string/dog_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <CheckBox
                    android:id="@+id/checkBoxCutestCat"
                    android:text="@string/cat_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <CheckBox
                    android:id="@+id/checkBoxCutestParrot"
                    android:text="@string/parrot_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>


            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/drool_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioGroup
                android:id="@+id/radioGroupDrool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioDroolNo"
                    android:text="@string/no_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/radioDroolYes"
                    android:text="@string/yes_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RadioGroup>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/showResult"
        android:text="@string/button_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_goneMarginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.516"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"
        app:layout_constraintVertical_bias="0.277" />

</android.support.constraint.ConstraintLayout>
